@@ -2,19 +2,19 @@
 <?pde version="3.8"?><target name="DDT Target" sequenceNumber="23">
 <locations>
 <location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
-<unit id="org.eclipse.platform.ide" version="3.7.2.M20120208-0800"/>
-<unit id="org.eclipse.equinox.executable.feature.group" version="3.5.1.v20111216-1653-7P7NFUIFIbaUcU77s0KQWHw5HZTZ"/>
-<unit id="org.eclipse.emf.ecore.feature.group" version="2.7.1.v20120127-1122"/>
-<unit id="org.eclipse.emf.common.feature.group" version="2.7.0.v20120127-1122"/>
-<repository location="http://download.eclipse.org/releases/indigo/"/>
+<unit id="org.eclipse.platform.feature.group" version="4.3.0.v20130605-2000"/>
+<unit id="org.eclipse.equinox.executable.feature.group" version="3.6.0.v20130521-0416"/>
+<unit id="org.eclipse.emf.ecore.feature.group" version="2.9.0.v20130528-0742"/>
+<unit id="org.eclipse.emf.common.feature.group" version="2.9.0.v20130528-0742"/>
+<repository location="http://download.eclipse.org/releases/kepler/"/>
 </location>
 <location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
-<unit id="org.eclipse.dltk.core.sdk.feature.group" version="3.0.0.v20101025-2100-79--90u49KJA5EWnnehvfrBQTf0z"/>
-<unit id="org.eclipse.dltk.javascript.sdk.feature.group" version="3.0.0.v20101125-1247-6--84h23HEEtYdeSOr8CqSGiBBpP"/>
-<unit id="org.eclipse.dltk.python.sdk.feature.group" version="2.0.0.v20090730-1514-4--84M22NfWGJIEgQf08I00CdNBH"/>
-<unit id="org.eclipse.dltk.ruby.sdk.feature.group" version="3.0.0.v20110424-6--84e23ICLpTai-6mICIrTdYP5l"/>
-<unit id="org.eclipse.dltk.tcl.sdk.feature.group" version="3.0.0.v20101109-0623-6--84l23HG7z-eiscV0O_l76KD4x"/>
-<repository location="http://download.eclipse.org/technology/dltk/updates-dev/3.0"/>
+<unit id="org.eclipse.dltk.core.sdk.feature.group" version="5.0.0.201306060709"/>
+<unit id="org.eclipse.dltk.javascript.sdk.feature.group" version="5.0.0.201306060709"/>
+<unit id="org.eclipse.dltk.python.sdk.feature.group" version="5.0.0.201306060709"/>
+<unit id="org.eclipse.dltk.ruby.sdk.feature.group" version="5.0.0.201306060709"/>
+<unit id="org.eclipse.dltk.tcl.sdk.feature.group" version="5.0.0.201306060709"/>
+<repository location="http://download.eclipse.org/technology/dltk/updates-dev/5.0"/>
 </location>
 <location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
 <unit id="org.hamcrest.core" version="1.3.0.v201303031735"/>
