@@ -2,15 +2,12 @@
 <?pde version="3.8"?><target name="DDT Target" sequenceNumber="22">
 <locations>
 <location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
-<unit id="org.eclipse.platform.ide" version="3.7.2.M20120208-0800"/>
-<unit id="org.eclipse.equinox.executable.feature.group" version="3.5.1.v20111216-1653-7P7NFUIFIbaUcU77s0KQWHw5HZTZ"/>
-<unit id="org.eclipse.emf.ecore.feature.group" version="2.7.1.v20120127-1122"/>
-<unit id="org.eclipse.emf.common.feature.group" version="2.7.0.v20120127-1122"/>
-<repository location="http://download.eclipse.org/releases/indigo/"/>
-</location>
-<location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
-<unit id="org.eclipse.dltk.core.feature.group" version="3.0.0.v20101211-0331-7l-2ED-z0UkhYdtV3_LBO"/>
-<repository location="http://download.eclipse.org/technology/dltk/updates-dev/3.0"/>
+<unit id="org.eclipse.platform.feature.group" version="4.3.0.v20130605-2000"/>
+<unit id="org.eclipse.equinox.executable.feature.group" version="3.6.0.v20130521-0416"/>
+<unit id="org.eclipse.emf.ecore.feature.group" version="2.9.0.v20130528-0742"/>
+<unit id="org.eclipse.emf.common.feature.group" version="2.9.0.v20130528-0742"/>
+<unit id="org.eclipse.dltk.core.feature.group" version="5.0.0.201306060709"/>
+<repository location="http://download.eclipse.org/releases/kepler/"/>
 </location>
 <location includeAllPlatforms="false" includeConfigurePhase="true" includeMode="slicer" includeSource="true" type="InstallableUnit">
 <unit id="org.hamcrest.core" version="1.3.0.v201303031735"/>
