@@ -15,8 +15,8 @@ Require-Bundle: org.dsource.ddt.dtool;bundle-version="[0.7.0,0.7.1)";visibility:
  org.eclipse.core.expressions;bundle-version="3.4.0",
  org.eclipse.jface;bundle-version="3.6.0",
  org.eclipse.jface.text;bundle-version="3.6.0",
- org.eclipse.dltk.core;bundle-version="[3.0.0,4.0.0)",
- org.eclipse.dltk.launching;bundle-version="[3.0.0,4.0.0)",
+ org.eclipse.dltk.core;bundle-version="[5.0.0,6.0.0)",
+ org.eclipse.dltk.launching;bundle-version="[5.0.0,6.0.0)",
  org.eclipse.debug.core;bundle-version="3.6.0"
 Bundle-ClassPath: .,
  libs/ini4j-0.3.2/ini4j-0.3.2.jar
