@@ -14,11 +14,11 @@ Require-Bundle: org.dsource.ddt.ide.core;bundle-version="[0.7.0,0.7.1)",
  org.eclipse.core.filesystem;bundle-version="1.3.0",
  org.eclipse.core.runtime;bundle-version="3.6.0",
  org.eclipse.jface.text;bundle-version="3.6.0",
- org.eclipse.dltk.core;bundle-version="[3.0.0,4.0.0)",
- org.eclipse.dltk.ui;bundle-version="[3.0.0,4.0.0)",
- org.eclipse.dltk.debug;bundle-version="[3.0.0,4.0.0)",
- org.eclipse.dltk.debug.ui;bundle-version="[3.0.0,4.0.0)",
- org.eclipse.dltk.launching;bundle-version="[3.0.0,4.0.0)",
+ org.eclipse.dltk.core;bundle-version="[5.0.0,6.0.0)",
+ org.eclipse.dltk.ui;bundle-version="[5.0.0,6.0.0)",
+ org.eclipse.dltk.debug;bundle-version="[5.0.0,6.0.0)",
+ org.eclipse.dltk.debug.ui;bundle-version="[5.0.0,6.0.0)",
+ org.eclipse.dltk.launching;bundle-version="[5.0.0,6.0.0)",
  org.eclipse.ui;bundle-version="3.6.0",
  org.eclipse.ui.editors;bundle-version="3.6.0",
  org.eclipse.ui.workbench.texteditor;bundle-version="3.6.0",
